@@ -15,6 +15,10 @@ Release 1.4-1.1 Start 29/04/2024 End 06/08/2024
 07. scan_short.c: added scan_short function
 - 16/07/2024
 08. authmethods.c, authmethods.h: Added XOAUTH2 auth methods
+- 05/09/2024
+09. tls.c: added imap to starttls enumeration
+10. case_uppers.c: added case_uppers() function
+11. case_upperb.c: added case_upperb() function
 
 * Sun Mar 03 2024 15:44:18 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.3-1.1%{?dist}
 Release 1.3-1.1 Start 30/11/2023 End 03/02/2024
